[package]
name = "rusty-seed-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rusty-seed-cli"
path = "src/main.rs"

[lib]
name = "rusty_seed_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
rand = "0.8.5"
rusty-seed-core = { path = "../rusty-seed-core" }