[package]
name = "rusty-seed-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.5"
rusty-seed-database = { path = "../rusty-seed-database" }
rusty-seed-core = { path = "../rusty-seed-core" }