[package]
name = "rusty-seed-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-seed-database = { path = "../rusty-seed-database" }
rusty-seed-core = { path = "../rusty-seed-core" }
clap = { version = "4.2.7", features = ["derive"] }